[package]
name = "kaoscreeps-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
derivative = "2.2.0"
fern = "0.6"
js-sys = "0.3"
log = "0.4"
screeps-game-api = { git = "https://github.com/rustyscreeps/screeps-game-api.git", branch = "bindgen" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[features]
default = ["console_error_panic_hook"]
